# minitorch

./: pyproject.toml  requirements.extra.txt
minitorch/: autodiff.py  module.py  operators.py  scalar.py  scalar_functions.py  tensor_data.py
project/: app.py
tests/: tensor_strategies.py  test_operators.py  test_tensor_data.py
