[project]
name = "minitorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "datasets==2.4.0",
    "embeddings==0.0.8",
    "hypothesis>=6.148.8",
    "mypy>=1.19.1",
    "networkx==2.4",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "plotly==4.14.3",
    "pre-commit>=4.5.1",
    "pydot==1.4.1",
    "pytest>=9.0.2",
    "pytest-env>=1.2.0",
    "pytest-runner>=6.0.1",
    "python-mnist>=0.7",
    "streamlit==1.12.0",
    "streamlit-ace>=0.1.1",
    "torch>=2.8.0",
    "typing-extensions>=4.15.0",
    "watchdog==1.0.2",
]
