[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minitorch"
version = "0.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "colorama>=0.4.6",
    "datasets==2.4.0",
    "embeddings==0.0.8",
    "hypothesis>=6.148.8",
    "mypy>=1.19.1",
    "networkx>=3.2",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "plotly==4.14.3",
    "pre-commit>=4.5.1",
    "pydot==1.4.1",
    "pytest>=9.0.2",
    "pytest-env>=1.2.0",
    "pytest-runner>=6.0.1",
    "python-mnist>=0.7",
    "streamlit==1.12.0",
    "streamlit-ace>=0.1.1",
    "torch>=2.8.0",
    "typing-extensions>=4.15.0",
    "watchdog==1.0.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
minitorch = { workspace = true }

[dependency-groups]
dev = [
    "minitorch",
]

[tool.pyright]
include = ["**/minitorch"]
exclude = [
    "**/docs",
    "**/docs/module1/**",
    "**/assignments",
    "**/project",
    "**/mt_diagrams",
    "**/.*",
    "*chainrule.py*",
]
venvPath = "."
venv = ".venv"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"
reportUnusedExpression = "none"
reportUnknownLambdaType = "none"
reportIncompatibleMethodOverride = "none"
reportPrivateUsage = "none"
reportMissingParameterType = "error"

[tool.pytest.ini_options]
markers = [
    "task0_0",
    "task0_1",
    "task0_2",
    "task0_3",
    "task0_4",
    "task1_0",
    "task1_1",
    "task1_2",
    "task1_3",
    "task1_4",
    "task2_0",
    "task2_1",
    "task2_2",
    "task2_3",
    "task2_4",
    "task3_0",
    "task3_1",
    "task3_2",
    "task3_3",
    "task3_4",
    "task4_0",
    "task4_1",
    "task4_2",
    "task4_3",
    "task4_4",
]

[tool.hatch.build.targets.wheel]
packages = ["minitorch"]

[tool.ruff]

exclude = [
    ".git",
    "__pycache__",
    "**/docs/slides/*",
    "old,build",
    "dist",
    "**/project/**/*",
    "**/mt_diagrams/*",
    "**/minitorch/testing.py",
    "**/docs/**/*",
]
